# asciiforger

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md
src/: asciivideo.rs  images.rs  lib.rs  video.rs  videotoimage.rs
tests/: test.rs
tests/res/: test_string  video.avi  videotest
